Using java modules where applicable