@@ -15,6 +15,20 @@
     <url>https://github.com/Miguel-Fontes/task-flow</url>
     <description>In memory repositories intended to be used in development</description>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--add-opens
+                        taskflow.persistence.mmdb/br.com.miguelfontes.taskflow.persistence.mmdb=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+
     <dependencies>
         <dependency>
             <groupId>br.com.miguelfontes</groupId>
